fixed alignments for responsive-removed console logs

--- a/src/App.css
+++ b/src/App.css
@@ -25,16 +25,16 @@
 }
 
 .add_form{
-  max-width: 400px;
-  margin : 100px;
+  width: 400px;
+  margin : 30px;
   border: 1px solid black;
   box-shadow: 0px 3px 5px 0px;
   border-radius: 5px;
   background-image: linear-gradient(#b6e18d7e,#deae927c);
 }
 .edit_form{
-  max-width: 400px;
-  margin : 100px;
+  width: 400px;
+  margin : 30px;
   border: 1px solid black;
   box-shadow: 0px 3px 5px 0px;
   border-radius: 5px;
